--- a/ikectl/Makefile
+++ b/ikectl/Makefile
@@ -6,7 +6,7 @@ PROG=		ikectl
 SRCS=		log.c ikeca.c ikectl.c parser.c util.c
 
 MAN=		ikectl.8
-BINDIR=		/usr/sbin
+BINDIR=		/sbin
 
 LDADD=		-lutil -lcrypto
 DPADD=		${LIBUTIL} ${LIBCRYPTO}
