Provide a sample rc init script
To use, copy the ${prefix}/etc/iked/rc.d/iked script to /etc/rc.d

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS=		openbsd-compat iked ikectl
+SUBDIRS=		openbsd-compat iked ikectl rc
 ACLOCAL_AMFLAGS=	-I m4
 
 PRIVKEY=$(DESTDIR)$(sysconfdir)/iked/private/local.key
